# gst-templete

gst-template/gst-plugin_facerecognition/: Makefile
gst-template/gst-plugin_facerecognition/src/: Makefile  Makefile.am  gstfacerecognition.c  libgstfacerecognition.la
gst-template/gst-plugin_facerecognition/src/.libs/: libgstfacerecognition.lai
gst-template/gst-plugin_facerecognition/src/include/: analytics_buffer.h
gst-template/gst-plugin_readYuvFile/: Makefile
gst-template/gst-plugin_readYuvFile/src/: Makefile  Makefile.am  gstwebrtc.c  gstwebrtc.h  libgstwebrtc.la  libgstwebrtc_la-Yuv.lo  libgstwebrtc_la-gstwebrtc.lo  libgstwebrtc_la-p2psocketsignalingchannel.lo  libgstwebrtc_la-wrapper.lo
gst-template/gst-plugin_readYuvFile/src/.deps/: libgstwebrtc_la-Yuv.Plo  libgstwebrtc_la-gstwebrtc.Plo  libgstwebrtc_la-p2psocketsignalingchannel.Plo  libgstwebrtc_la-wrapper.Plo  libgstyuvsink_la-Yuv.Plo  libgstyuvsink_la-gstyuvsink.Plo  libgstyuvsink_la-p2psocketsignalingchannel.Plo  libgstyuvsink_la-wrapper.Plo
gst-template/gst-plugin_readYuvFile/src/.libs/: libgstwebrtc.exp  libgstwebrtc.la  libgstwebrtc.lai
gst-template/gst-plugin_readYuvFile/src/case/: Yuv.cpp  Yuv.h  p2psocketsignalingchannel.h  wrapper.cpp  wrapper.h
gst-template/gst-plugin_readYuvFile/src/case/libs/: libsioclient.so.1
gst-template/gst-plugin_receiveData/: Makefile
gst-template/gst-plugin_receiveData/src/: Makefile  Makefile.am  gstreceivedata.c  libgstreceivedata.la
gst-template/gst-plugin_receiveData/src/.deps/: libgstreceivedata_la-Server.Plo  libgstreceivedata_la-wrapper.Plo
gst-template/gst-plugin_receiveData/src/.libs/: libgstreceivedata.lai
gst-template/gst-plugin_receiveData/src/case/: Server.cpp  Server.h  wrapper.cpp  wrapper.h
gst-template/gst-plugin_sendData/: Makefile
gst-template/gst-plugin_sendData/src/: Makefile  gstsenddata.c  gstsenddata.h
gst-template/gst-plugin_sendData/src/.deps/: libgstsenddata_la-Server.Plo  libgstsenddata_la-wrapper.Plo
gst-template/gst-plugin_sendData/src/case/: Server.cpp  Server.h  wrapper.cpp  wrapper.h
gst-template/gst-plugin_v1/: Makefile  autogen.sh  configure.ac  hi.c
gst-template/gst-plugin_v1/src/: Makefile  Makefile.am  gstexamplefilter.c  gstexamplefilter.h  gstwebrtc.c  gstwebrtc.h  libgstexamplefilter.la  libgstexamplefilter_la-gstexamplefilter.lo  libgstexamplefilter_la-p2psocketsignalingchannel.lo  libgstexamplefilter_la-wrapper.lo
gst-template/gst-plugin_v1/src/.deps/: libgstexamplefilter_la-gstexamplefilter.Plo  libgstexamplefilter_la-isTest.Plo  libgstexamplefilter_la-p2pconnect.Plo  libgstexamplefilter_la-p2psocketsignalingchannel.Plo  libgstexamplefilter_la-person.Plo  libgstexamplefilter_la-wrapper.Plo
gst-template/gst-plugin_v1/src/.libs/: libgstexamplefilter.exp  libgstexamplefilter.la  libgstexamplefilter.lai
gst-template/gst-plugin_v1/src/case/: isTest.c  p2psocketsignalingchannel.cc  person.cpp  person.h  wrapper.cpp  wrapper.h
